--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-
-<div class="search-form">
-    <input #searchTerm (keyup.enter)="search(searchTerm.value)">
-    <button (click)="search(searchTerm.value)">Search</button>
-</div>
 <app-orbit-list [satellites]="displayList"></app-orbit-list>
+<div class="search-form">
+    Search:
+    <input #searchTerm type="text" (keyup.enter)="search(searchTerm.value);">
+    <button (click)="search(searchTerm.value);">Search</button>
+</div>
