--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -1,17 +1,29 @@
 <h3>Orbit Report</h3>
 <table>
    <tr class="header-row">
-    <th class="sortable" (click)="sort('name')">Name</th>
-    <th class="sortable" (click)="sort('type')">Type</th>
+      <th class="sortable" (click) = "sort('name')">Name</th>
+      <th class="sortable" (click) = "sort('type')">Type</th>
       <th>Operational</th>
       <th>Orbit Type</th>
       <th>Launch Date</th>
    </tr>
+
    <tr *ngFor="let satellite of satellites">
     <td>{{satellite.name}}</td>
-    <td [class.warning]="satellite.shouldShowWarning()">{{satellite.type}}</td>
-    <td>{{satellite.launchDate}}</td>
-    <td>{{satellite.orbitType}}</td>
+    <td [class.warning]="satellite.needsWarning">{{satellite.type}}</td>
     <td>{{satellite.operational}}</td>
+    <td>{{satellite.orbitType}}</td>
+    <td>{{satellite.launchDate}}</td>
     </tr>
+
 </table>
+
+<script>
+      document.getElementById("satelliteName").addEventListener("click", function(){
+         sort('name');
+       });
+   
+       document.getElementById("satelliteType").addEventListener("click", function(){
+         sort('type');
+       });
+</script>
